# Python-LivoxSDK2

./: CMakeLists.txt  openpylivoxv2.cpp
Livox-SDK2/: CMakeLists.txt
Livox-SDK2/samples/: CMakeLists.txt
Livox-SDK2/samples/debug_point_cloud/: CMakeLists.txt  mid360_config.json
Livox-SDK2/samples/lidar_cmd_observer/: CMakeLists.txt
Livox-SDK2/samples/livox_lidar_quick_start/: CMakeLists.txt  mid360_config.json
Livox-SDK2/samples/livox_lidar_rmc_time_sync/: CMakeLists.txt
Livox-SDK2/samples/logger/: CMakeLists.txt
Livox-SDK2/samples/multi_lidars_upgrade/: CMakeLists.txt
Livox-SDK2/sdk_core/: CMakeLists.txt
Livox-SDK2/sdk_core/comm/: define.h
Livox-SDK2/sdk_core/logger_handler/: file_manager.h
